# ansible-collection-minecraft

./: .copier-answers.yml  .gitpod.yml  LICENSE  README.md  galaxy.yml  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
molecule/default/: converge.yml  molecule.yml
roles/minecraft/defaults/: main.yml
roles/minecraft/meta/: main.yml
roles/minecraft/tasks/: configure.yml  dependencies.yml  download.yml  main.yml  service.yml  structure.yml  user.yml
roles/minecraft/templates/: minecraft.service.j2  minecraft.socket.j2  server.properties.j2  whitelist.json.j2
